feat: 2добавлены баги для последующего исправления
